--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
+    "bcrypt": "^4.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "knex": "^0.20.10",
     "sqlite": "^3.0.3",
     "sqlite3": "^4.1.1"
